js/js.translator/testData/incremental/invalidation/openClassWithInternalField/lib1/A.0.kt
abstract class A {
    internal var prop: Int = 0
    internal fun func(): Int = 0
}
